--- a/pytest/test.ipynb
+++ b/pytest/test.ipynb
@@ -2,14 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['{\"data\":[{\"Generell info og kommentarer\":{\"field\":\" 35/12-2 (Grosbeak)\",\"od-id\":402.0}},{\"Profil_1\":{\"project_name\":\"Grosbeak\"},\"Profil_2\":{\"project_name\":null}}],\"file\":\"D:\\\\\\\\temp\\\\\\\\File2.xlsm\"}', '{\"data\":[{\"Generell info og kommentarer\":{\"field\":\"STATFJORD\",\"od-id\":40.0}},{\"Profil_1\":{\"project_name\":\"Base profile\"},\"Profil_2\":{\"project_name\":\"Infill wells RC 5\"}}],\"file\":\"D:\\\\\\\\temp\\\\\\\\File5.xlsm\"}', '{\"data\":[{\"Generell info og kommentarer\":{\"field\":\"SLEIPNER VEST\",\"od-id\":35.0}},{\"Profil_1\":{\"project_name\":\"Base profile\"},\"Profil_2\":{\"project_name\":\"Delta Sør\"}}],\"file\":\"D:\\\\\\\\temp\\\\\\\\File4.xlsm\"}', '{\"data\":[{\"Generell info og kommentarer\":{\"field\":\"ORMEN LANGE\",\"od-id\":204.0}},{\"Profil_1\":{\"project_name\":\"Ormen Lange\"},\"Profil_2\":{\"project_name\":null}}],\"file\":\"D:\\\\\\\\temp\\\\\\\\File3.xlsm\"}', '{\"data\":[{\"Generell info og kommentarer\":{\"field\":\" 25/2-10 S (Frigg-GammaDelta)\",\"od-id\":292.0}},{\"Profil_1\":{\"project_name\":\"Frigg Gamma\"},\"Profil_2\":{\"project_name\":\"PdQ, Oil & Gas Export, Power from shore\"}}],\"file\":\"D:\\\\\\\\temp\\\\\\\\File1.xlsm\"}']\n"
+     "ename": "RuntimeError",
+     "evalue": "Error processing files: Missing or invalid \"extractions\" key in extraction details",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 11\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m#files = ['D:\\\\temp\\\\25_2-10 S (Frigg-Gammadelta)_RNB2022.xlsm', 'D:\\\\temp\\\\35_12_2 (Grosbeak)_RNB2022.xlsm', 'D:\\\\temp\\\\Ormen Lange_RNB2022.xlsm', 'D:\\\\temp\\\\Sleipner Vest_RNB2022.xlsm', 'D:\\\\temp\\\\Statfjord_RNB2022.xlsm']\u001b[39;00m\n\u001b[0;32m      5\u001b[0m extraction_details \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m      6\u001b[0m     {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msheets\u001b[39m\u001b[38;5;124m\"\u001b[39m:[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGenerell info og kommentarer\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcells\u001b[39m\u001b[38;5;124m\"\u001b[39m:{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfield\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124md7\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mod-id\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mm8\u001b[39m\u001b[38;5;124m\"\u001b[39m}},\n\u001b[0;32m      7\u001b[0m     {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msheets\u001b[39m\u001b[38;5;124m\"\u001b[39m:[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mProfil_1\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mProfil_2\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcells\u001b[39m\u001b[38;5;124m\"\u001b[39m:{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mproject_name\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mh7\u001b[39m\u001b[38;5;124m\"\u001b[39m}}\n\u001b[0;32m      8\u001b[0m ]\n\u001b[1;32m---> 11\u001b[0m results \u001b[38;5;241m=\u001b[39m \u001b[43msheet_excavator\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexcel_extract\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfiles\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mextraction_details\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(results)\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Error processing files: Missing or invalid \"extractions\" key in extraction details"
      ]
     }
    ],
